[package]
name = "car"
version = "0.1.0"
authors = ["AngeloCipriani <angelo13cipriani.03@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
car = []
controller = []

[[bin]]
name = "car"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
#packable = "0.7"
avr-device = "0.4"
iron = { path = "../iron" }

embedded-nrf24l01 = "0.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4170a773d4d76cc93433d2455ed8b14e573ebe70"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
